# fpl-toolkit

./: LICENSE  README.md  pyproject.toml  requirements.txt
fplkit/: __init__.py  api.py  cli.py  projections.py
tests/: test_projections.py
workflows/: ci.yml  daily-top.yml
