[project]
name = "fplkit"
version = "0.1.0"
description = "Lightweight Fantasy Premier League toolkit (fetch + simple projections)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.32,<3"]

[project.scripts]
fplkit = "fplkit.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
